--- a/intex.html
+++ b/intex.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/intex.css">
+    <link rel="stylesheet" href="/style.css">
     <title>Holidays-OnlinetourPlanning</title>
 </head>
 
